io-gif: Switch arguments to fread() to fix Coverity issue

The arguments were provided the wrong way round: the variable number
should always be the nmemb argument, rather than loading a single
element of variable size.

Signed-off-by: Philip Withnall <withnall@endlessm.com>

https://bugzilla.gnome.org/show_bug.cgi?id=785696